chore: rename postgers DB name in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:14.1
     environment:
-      - POSTGRES_DB=styleguide_example_db
+      - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
 
@@ -23,7 +23,7 @@ services:
       dockerfile: docker/local.Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     environment:
-      - DATABASE_URL=postgres://postgres:postgres@db:5432/styleguide_example_db
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
     volumes:
       - .:/app
@@ -40,7 +40,7 @@ services:
       dockerfile: docker/local.Dockerfile
     command: celery -A styleguide_example.tasks worker -l info --without-gossip --without-mingle --without-heartbeat
     environment:
-      - DATABASE_URL=postgres://postgres:postgres@db:5432/styleguide_example_db
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
     volumes:
       - .:/app
@@ -55,7 +55,7 @@ services:
       dockerfile: docker/local.Dockerfile
     command: celery -A styleguide_example.tasks beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     environment:
-      - DATABASE_URL=postgres://postgres:postgres@db:5432/styleguide_example_db
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
     volumes:
       - .:/app
